<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/blue_app"
            android:text="@string/informasi_pelajar"
            android:textSize="22sp"/>

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_app"
            android:contentDescription="@string/tutup"
            android:src="@drawable/baseline_close"
            android:padding="12dp"
            android:minWidth="48dp"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_app"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/nama" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_app"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_app"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/nisn2" />

        <TextView
            android:id="@+id/tvNISN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_app"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_app"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/sekolah" />

        <TextView
            android:id="@+id/tvSekolah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_app"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnUbahPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/blue_app"
            android:textColor="@color/white"
            android:text="@string/ubah_password" />

        <Button
            android:id="@+id/btnLogoutNISN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_app"
            android:textColor="@color/white"
            android:text="@string/logout" />

    </LinearLayout>

</LinearLayout>
