<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/blue_app"
            android:text="@string/ubah_password"
            android:textSize="22sp"/>

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_app"
            android:contentDescription="@string/tutup"
            android:src="@drawable/baseline_close"
            android:padding="12dp"
            android:minWidth="48dp"
            android:minHeight="48dp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@android:color/holo_orange_light"
        android:textColorHint="@color/white"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_lama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pw_old_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="16"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_app" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@android:color/holo_orange_light"
        android:textColorHint="@color/white"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_baru">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pw_new_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="16"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_app" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSubmitUbahPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_app"
            android:textColor="@color/white"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>
