<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingHorizontal="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/blue_app"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:layout_toStartOf="@id/notif"
            android:src="@drawable/baseline_refresh"
            android:contentDescription="@string/tombol_refresh" />

        <ImageView
            android:id="@+id/notif"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:layout_toStartOf="@id/login"
            android:src="@drawable/baseline_notifications"
            android:contentDescription="@string/tombol_histori_notifikasi" />

        <ImageView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_login"
            android:contentDescription="@string/tombol_login_akun" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <WebView
                android:id="@+id/wvMaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true">

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>