<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/blue_app"
            android:text="@string/notifikasi"
            android:textSize="22sp"/>

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_app"
            android:contentDescription="@string/tutup"
            android:src="@drawable/baseline_close"
            android:padding="12dp"
            android:minWidth="48dp"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notifContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/histori_7_hari_terakhir"
            android:textColor="@color/blue_app"
            android:textStyle="italic"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
